# src/main/java/be/projetSGBD/hateoas/CentreVaccinationRepresentationModelAssembler.java
@@ -30,7 +30,8 @@ public class CentreVaccinationRepresentationModelAssembler extends Representatio
 		resource.idCentreVaccination(entity.getIdCentreVaccination())
 			.patient(centreService.toModelListPatient(entity.getPatient()))
 			.vaccin(centreService.toModelList(entity.getVaccin()))
-			.planning(centreService.toModelListPlanning(entity.getPlanning()));
+			.planning(centreService.toModelListPlanning(entity.getPlanning()))
+			.idAssociation(entity.getAssociation().getIdAssociation());
 		
 		resource.add(linkTo(methodOn(CentreVaccinationController.class).getCentreVaccinationByIdCentreVaccination(entity.getIdCentreVaccination())).withSelfRel());
 		
